logs/bpformation.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/args-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/bpformation'...
Compiling './lib/python3.5/site-packages/bpformation/blueprint.py'...
***   File "./lib/python3.5/site-packages/bpformation/blueprint.py", line 128
    print "Unknown: %s" % root.tag
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bpformation/package.py'...
***   File "./lib/python3.5/site-packages/bpformation/package.py", line 113
    raise Exception, "scraping error. failed to find publish-package-job-id"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bpformation/shell.py'...
***   File "./lib/python3.5/site-packages/bpformation/shell.py", line 304
    if not supress_output and bpformation.args.args.format == 'json':  print bpformation.output.Json(r,cols)
                                                                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bpformation/terminal_size.py'...
***   File "./lib/python3.5/site-packages/bpformation/terminal_size.py", line 26
    print "default"
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bpformation/web.py'...
***   File "./lib/python3.5/site-packages/bpformation/web.py", line 57
    print "\n".join([
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bpformation-0.26.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/clc'...
Listing './lib/python3.5/site-packages/clc/APIv1'...
Compiling './lib/python3.5/site-packages/clc/APIv1/billing.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (billing.py, line 27)
Compiling './lib/python3.5/site-packages/clc/APIv1/blueprint.py'...
***   File "./lib/python3.5/site-packages/clc/APIv1/blueprint.py", line 202
    if items_lst[l]['selected']:  print "[x] %s %s" % (l_f.ljust(4),items_lst[l]['Description'])
                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/clc/APIv1/output.py'...
***   File "./lib/python3.5/site-packages/clc/APIv1/output.py", line 104
    print keys
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/clc/APIv1/shell.py'...
***   File "./lib/python3.5/site-packages/clc/APIv1/shell.py", line 924
    if not supress_output and clc.args.args.format == 'json':  print clc.v1.output.Json(r,cols)
                                                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/clc/APIv1/terminal_size.py'...
***   File "./lib/python3.5/site-packages/clc/APIv1/terminal_size.py", line 26
    print "default"
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/clc/APIv2'...
Compiling './lib/python3.5/site-packages/clc/APIv2/time_utils.py'...
***   File "./lib/python3.5/site-packages/clc/APIv2/time_utils.py", line 35
    print "Now:     %s" % now
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/clc_sdk-2.46.egg-info'...
Listing './lib/python3.5/site-packages/clint'...
Listing './lib/python3.5/site-packages/clint/packages'...
Listing './lib/python3.5/site-packages/clint/packages/colorama'...
Listing './lib/python3.5/site-packages/clint/textui'...
Listing './lib/python3.5/site-packages/clint-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prettytable-0.7.2.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
